<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/start_page_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/start_page_activity_start_page_constraint_layout_background_color">

	<ImageView
		android:id="@+id/signin_image_view"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginRight="@dimen/start_page_activity_signin_image_view_margin_end"
		android:scaleType="centerCrop"
		android:src="@drawable/signin"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="0dp"/>

	<Button
		android:id="@+id/signup_button"
		android:layout_width="@dimen/start_page_activity_signup_button_width"
		android:layout_height="@dimen/start_page_activity_signup_button_height"
		android:layout_marginBottom="@dimen/start_page_activity_signup_button_margin_bottom"
		android:background="@drawable/start_page_activity_signup_button_ripple"
		android:fontFamily="@font/font_avenir_medium"
		android:gravity="center"
		android:text="@string/start_page_activity_signup_button_text"
		android:textColor="@color/start_page_activity_signup_button_text_color"
		android:textSize="@dimen/start_page_activity_signup_button_text_size"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="25dp"
		tools:layout_editor_absoluteY="575dp"/>

	<Button
		android:id="@+id/signin_button"
		android:layout_width="@dimen/start_page_activity_signin_button_width"
		android:layout_height="@dimen/start_page_activity_signin_button_height"
		android:layout_marginBottom="@dimen/start_page_activity_signin_button_margin_bottom"
		android:background="@drawable/start_page_activity_signin_button_ripple"
		android:fontFamily="@font/font_avenir_medium"
		android:gravity="center"
		android:text="@string/start_page_activity_signin_button_text"
		android:textColor="@color/start_page_activity_signin_button_text_color"
		android:textSize="@dimen/start_page_activity_signin_button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/signup_button"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="25dp"
		tools:layout_editor_absoluteY="500dp"/>

	<TextView
		android:id="@+id/tagline_text_view"
		android:layout_width="@dimen/start_page_activity_tagline_text_view_width"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/start_page_activity_tagline_text_view_margin_top"
		android:fontFamily="@font/font_avenir_light"
		android:gravity="start"
		android:lineSpacingMultiplier="1.16"
		android:text="@string/start_page_activity_tagline_text_view_text"
		android:textColor="@color/start_page_activity_tagline_text_view_text_color"
		android:textSize="@dimen/start_page_activity_tagline_text_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/title_text_view"
		tools:layout_editor_absoluteX="25dp"
		tools:layout_editor_absoluteY="131dp"/>

	<TextView
		android:id="@+id/title_text_view"
		android:layout_width="@dimen/start_page_activity_title_text_view_width"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/start_page_activity_title_text_view_margin_top"
		android:fontFamily="@font/font_avenir_medium"
		android:gravity="start"
		android:lineSpacingMultiplier="1.17"
		android:text="@string/start_page_activity_title_text_view_text"
		android:textColor="@color/start_page_activity_title_text_view_text_color"
		android:textSize="@dimen/start_page_activity_title_text_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="25dp"
		tools:layout_editor_absoluteY="34dp"/>
</android.support.constraint.ConstraintLayout>